collects/tests/xml/clark-tests/valid/not-sa/027.ent
<!ENTITY % e "">
<!ELEMENT doc (#PCDATA %e;)>
