collects/tests/xml/clark-tests/invalid/002.ent
<!ENTITY % e "(#PCDATA">
<!ELEMENT doc %e;)>
